--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
+        "@vitejs/plugin-basic-ssl": "^2.1.4",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
         "daisyui": "^5.5.17",
